TG-1553:UI: When I edit the company profile of staffing admin it shows the overlapping issue.

--- a/tag_workflow/public/css/tag.css
+++ b/tag_workflow/public/css/tag.css
@@ -519,6 +519,9 @@ input::-webkit-credentials-auto-fill-button {
   background: #fff;
   z-index: 999;
 }
+.awesomplete > ul {
+  z-index: 999 !important;
+}
 
 @media (max-width: 1300px) {
   .col.layout-main-section-wrapper,
